// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Stat Items Component disable charts it renders the default widget 1`] = `
<Component
  description="HOSTS"
  fields={
    Array [
      Object {
        "color": "#3185FC",
        "icon": "cross",
        "key": "hosts",
        "value": null,
      },
    ]
  }
>
  <Styled(EuiFlexItem)>
    <EuiFlexItem
      className="sc-bxivhb bQCHAr"
    >
      <div
        className="euiFlexItem sc-bxivhb bQCHAr"
      >
        <EuiPanel
          grow={true}
          hasShadow={false}
          paddingSize="m"
        >
          <div
            className="euiPanel euiPanel--paddingMedium"
          >
            <EuiTitle
              size="xxxs"
            >
              <h6
                className="euiTitle euiTitle--xxxsmall"
              >
                HOSTS
              </h6>
            </EuiTitle>
            <EuiFlexGroup>
              <div
                className="euiFlexGroup euiFlexGroup--gutterLarge euiFlexGroup--directionRow euiFlexGroup--responsive"
              >
                <Styled(EuiFlexItem)
                  key="stat-items-field-hosts"
                >
                  <EuiFlexItem
                    className="sc-bxivhb bQCHAr"
                  >
                    <div
                      className="euiFlexItem sc-bxivhb bQCHAr"
                    >
                      <EuiFlexGroup
                        alignItems="center"
                        gutterSize="m"
                        responsive={false}
                      >
                        <div
                          className="euiFlexGroup euiFlexGroup--gutterMedium euiFlexGroup--alignItemsCenter euiFlexGroup--directionRow"
                        >
                          <Styled(EuiFlexItem)>
                            <EuiFlexItem
                              className="sc-bxivhb bQCHAr"
                            >
                              <div
                                className="euiFlexItem sc-bxivhb bQCHAr"
                              >
                                <Styled(EuiTitle)>
                                  <EuiTitle
                                    className="sc-ifAKCX bfXlPM"
                                  >
                                    <p
                                      className="euiTitle euiTitle--medium sc-ifAKCX bfXlPM"
                                      data-test-subj="stat-title"
                                    >
                                      --
                                       
                                    </p>
                                  </EuiTitle>
                                </Styled(EuiTitle)>
                              </div>
                            </EuiFlexItem>
                          </Styled(EuiFlexItem)>
                        </div>
                      </EuiFlexGroup>
                    </div>
                  </EuiFlexItem>
                </Styled(EuiFlexItem)>
              </div>
            </EuiFlexGroup>
            <EuiFlexGroup>
              <div
                className="euiFlexGroup euiFlexGroup--gutterLarge euiFlexGroup--directionRow euiFlexGroup--responsive"
              />
            </EuiFlexGroup>
          </div>
        </EuiPanel>
      </div>
    </EuiFlexItem>
  </Styled(EuiFlexItem)>
</Component>
`;

exports[`Stat Items Component disable charts it renders the default widget 2`] = `
<Component
  areaChart={Array []}
  barChart={Array []}
  description="HOSTS"
  fields={
    Array [
      Object {
        "color": "#3185FC",
        "icon": "cross",
        "key": "hosts",
        "value": null,
      },
    ]
  }
>
  <Styled(EuiFlexItem)>
    <EuiFlexItem
      className="sc-bxivhb bQCHAr"
    >
      <div
        className="euiFlexItem sc-bxivhb bQCHAr"
      >
        <EuiPanel
          grow={true}
          hasShadow={false}
          paddingSize="m"
        >
          <div
            className="euiPanel euiPanel--paddingMedium"
          >
            <EuiTitle
              size="xxxs"
            >
              <h6
                className="euiTitle euiTitle--xxxsmall"
              >
                HOSTS
              </h6>
            </EuiTitle>
            <EuiFlexGroup>
              <div
                className="euiFlexGroup euiFlexGroup--gutterLarge euiFlexGroup--directionRow euiFlexGroup--responsive"
              >
                <Styled(EuiFlexItem)
                  key="stat-items-field-hosts"
                >
                  <EuiFlexItem
                    className="sc-bxivhb bQCHAr"
                  >
                    <div
                      className="euiFlexItem sc-bxivhb bQCHAr"
                    >
                      <EuiFlexGroup
                        alignItems="center"
                        gutterSize="m"
                        responsive={false}
                      >
                        <div
                          className="euiFlexGroup euiFlexGroup--gutterMedium euiFlexGroup--alignItemsCenter euiFlexGroup--directionRow"
                        >
                          0
                          <Styled(EuiFlexItem)>
                            <EuiFlexItem
                              className="sc-bxivhb bQCHAr"
                            >
                              <div
                                className="euiFlexItem sc-bxivhb bQCHAr"
                              >
                                <Styled(EuiTitle)>
                                  <EuiTitle
                                    className="sc-ifAKCX bfXlPM"
                                  >
                                    <p
                                      className="euiTitle euiTitle--medium sc-ifAKCX bfXlPM"
                                      data-test-subj="stat-title"
                                    >
                                      --
                                       
                                    </p>
                                  </EuiTitle>
                                </Styled(EuiTitle)>
                              </div>
                            </EuiFlexItem>
                          </Styled(EuiFlexItem)>
                        </div>
                      </EuiFlexGroup>
                    </div>
                  </EuiFlexItem>
                </Styled(EuiFlexItem)>
              </div>
            </EuiFlexGroup>
            <EuiFlexGroup>
              <div
                className="euiFlexGroup euiFlexGroup--gutterLarge euiFlexGroup--directionRow euiFlexGroup--responsive"
              />
            </EuiFlexGroup>
          </div>
        </EuiPanel>
      </div>
    </EuiFlexItem>
  </Styled(EuiFlexItem)>
</Component>
`;

exports[`Stat Items Component rendering kpis with charts it renders the default widget 1`] = `
<Component
  areaChart={
    Array [
      Object {
        "color": "#DB1374",
        "key": "uniqueSourceIpsHistogram",
        "value": Array [
          Object {
            "x": 1556686800000,
            "y": 580213,
          },
          Object {
            "x": 1556730000000,
            "y": 1096175,
          },
          Object {
            "x": 1556773200000,
            "y": 12382,
          },
        ],
      },
      Object {
        "color": "#490092",
        "key": "uniqueDestinationIpsHistogram",
        "value": Array [
          Object {
            "x": 1556686800000,
            "y": 565975,
          },
          Object {
            "x": 1556730000000,
            "y": 1084366,
          },
          Object {
            "x": 1556773200000,
            "y": 12280,
          },
        ],
      },
    ]
  }
  barChart={
    Array [
      Object {
        "color": "#DB1374",
        "key": "uniqueSourceIps",
        "value": Array [
          Object {
            "x": "uniqueSourceIps",
            "y": "1714",
          },
        ],
      },
      Object {
        "color": "#490092",
        "key": "uniqueDestinationIps",
        "value": Array [
          Object {
            "x": "uniqueDestinationIps",
            "y": 2354,
          },
        ],
      },
    ]
  }
  description="UNIQUE_PRIVATE_IPS"
  enableAreaChart={true}
  enableBarChart={true}
  fields={
    Array [
      Object {
        "color": "#DB1374",
        "description": "Source",
        "icon": "cross",
        "key": "uniqueSourceIps",
        "value": 1714,
      },
      Object {
        "color": "#490092",
        "description": "Dest.",
        "icon": "cross",
        "key": "uniqueDestinationIps",
        "value": 2359,
      },
    ]
  }
>
  <Styled(EuiFlexItem)>
    <EuiFlexItem
      className="sc-bxivhb bQCHAr"
    >
      <div
        className="euiFlexItem sc-bxivhb bQCHAr"
      >
        <EuiPanel
          grow={true}
          hasShadow={false}
          paddingSize="m"
        >
          <div
            className="euiPanel euiPanel--paddingMedium"
          >
            <EuiTitle
              size="xxxs"
            >
              <h6
                className="euiTitle euiTitle--xxxsmall"
              >
                UNIQUE_PRIVATE_IPS
              </h6>
            </EuiTitle>
            <EuiFlexGroup>
              <div
                className="euiFlexGroup euiFlexGroup--gutterLarge euiFlexGroup--directionRow euiFlexGroup--responsive"
              >
                <Styled(EuiFlexItem)
                  key="stat-items-field-uniqueSourceIps"
                >
                  <EuiFlexItem
                    className="sc-bxivhb bQCHAr"
                  >
                    <div
                      className="euiFlexItem sc-bxivhb bQCHAr"
                    >
                      <EuiFlexGroup
                        alignItems="center"
                        gutterSize="m"
                        responsive={false}
                      >
                        <div
                          className="euiFlexGroup euiFlexGroup--gutterMedium euiFlexGroup--alignItemsCenter euiFlexGroup--directionRow"
                        >
                          <Styled(EuiFlexItem)
                            grow={false}
                          >
                            <EuiFlexItem
                              className="sc-bxivhb bQCHAr"
                              grow={false}
                            >
                              <div
                                className="euiFlexItem euiFlexItem--flexGrowZero sc-bxivhb bQCHAr"
                              >
                                <EuiIcon
                                  color="#DB1374"
                                  data-test-subj="stat-icon"
                                  size="l"
                                  type="cross"
                                >
                                  <EuiIconEmpty
                                    className="euiIcon euiIcon--large euiIcon-isLoading"
                                    data-test-subj="stat-icon"
                                    focusable="false"
                                    style={
                                      Object {
                                        "fill": "#DB1374",
                                      }
                                    }
                                  >
                                    <svg
                                      className="euiIcon euiIcon--large euiIcon-isLoading"
                                      data-test-subj="stat-icon"
                                      focusable="false"
                                      height={16}
                                      style={
                                        Object {
                                          "fill": "#DB1374",
                                        }
                                      }
                                      viewBox="0 0 16 16"
                                      width={16}
                                      xmlns="http://www.w3.org/2000/svg"
                                    />
                                  </EuiIconEmpty>
                                </EuiIcon>
                              </div>
                            </EuiFlexItem>
                          </Styled(EuiFlexItem)>
                          <Styled(EuiFlexItem)>
                            <EuiFlexItem
                              className="sc-bxivhb bQCHAr"
                            >
                              <div
                                className="euiFlexItem sc-bxivhb bQCHAr"
                              >
                                <Styled(EuiTitle)>
                                  <EuiTitle
                                    className="sc-ifAKCX bfXlPM"
                                  >
                                    <p
                                      className="euiTitle euiTitle--medium sc-ifAKCX bfXlPM"
                                      data-test-subj="stat-title"
                                    >
                                      1,714
                                       
                                      Source
                                    </p>
                                  </EuiTitle>
                                </Styled(EuiTitle)>
                              </div>
                            </EuiFlexItem>
                          </Styled(EuiFlexItem)>
                        </div>
                      </EuiFlexGroup>
                    </div>
                  </EuiFlexItem>
                </Styled(EuiFlexItem)>
                <Styled(EuiFlexItem)
                  key="stat-items-field-uniqueDestinationIps"
                >
                  <EuiFlexItem
                    className="sc-bxivhb bQCHAr"
                  >
                    <div
                      className="euiFlexItem sc-bxivhb bQCHAr"
                    >
                      <EuiFlexGroup
                        alignItems="center"
                        gutterSize="m"
                        responsive={false}
                      >
                        <div
                          className="euiFlexGroup euiFlexGroup--gutterMedium euiFlexGroup--alignItemsCenter euiFlexGroup--directionRow"
                        >
                          <Styled(EuiFlexItem)
                            grow={false}
                          >
                            <EuiFlexItem
                              className="sc-bxivhb bQCHAr"
                              grow={false}
                            >
                              <div
                                className="euiFlexItem euiFlexItem--flexGrowZero sc-bxivhb bQCHAr"
                              >
                                <EuiIcon
                                  color="#490092"
                                  data-test-subj="stat-icon"
                                  size="l"
                                  type="cross"
                                >
                                  <EuiIconEmpty
                                    className="euiIcon euiIcon--large euiIcon-isLoading"
                                    data-test-subj="stat-icon"
                                    focusable="false"
                                    style={
                                      Object {
                                        "fill": "#490092",
                                      }
                                    }
                                  >
                                    <svg
                                      className="euiIcon euiIcon--large euiIcon-isLoading"
                                      data-test-subj="stat-icon"
                                      focusable="false"
                                      height={16}
                                      style={
                                        Object {
                                          "fill": "#490092",
                                        }
                                      }
                                      viewBox="0 0 16 16"
                                      width={16}
                                      xmlns="http://www.w3.org/2000/svg"
                                    />
                                  </EuiIconEmpty>
                                </EuiIcon>
                              </div>
                            </EuiFlexItem>
                          </Styled(EuiFlexItem)>
                          <Styled(EuiFlexItem)>
                            <EuiFlexItem
                              className="sc-bxivhb bQCHAr"
                            >
                              <div
                                className="euiFlexItem sc-bxivhb bQCHAr"
                              >
                                <Styled(EuiTitle)>
                                  <EuiTitle
                                    className="sc-ifAKCX bfXlPM"
                                  >
                                    <p
                                      className="euiTitle euiTitle--medium sc-ifAKCX bfXlPM"
                                      data-test-subj="stat-title"
                                    >
                                      2,359
                                       
                                      Dest.
                                    </p>
                                  </EuiTitle>
                                </Styled(EuiTitle)>
                              </div>
                            </EuiFlexItem>
                          </Styled(EuiFlexItem)>
                        </div>
                      </EuiFlexGroup>
                    </div>
                  </EuiFlexItem>
                </Styled(EuiFlexItem)>
              </div>
            </EuiFlexGroup>
            <EuiHorizontalRule>
              <hr
                className="euiHorizontalRule euiHorizontalRule--full euiHorizontalRule--marginLarge"
              />
            </EuiHorizontalRule>
            <EuiFlexGroup>
              <div
                className="euiFlexGroup euiFlexGroup--gutterLarge euiFlexGroup--directionRow euiFlexGroup--responsive"
              >
                <Styled(EuiFlexItem)>
                  <EuiFlexItem
                    className="sc-bxivhb bQCHAr"
                  >
                    <div
                      className="euiFlexItem sc-bxivhb bQCHAr"
                    >
                      <Component
                        barChart={
                          Array [
                            Object {
                              "color": "#DB1374",
                              "key": "uniqueSourceIps",
                              "value": Array [
                                Object {
                                  "x": "uniqueSourceIps",
                                  "y": "1714",
                                },
                              ],
                            },
                            Object {
                              "color": "#490092",
                              "key": "uniqueDestinationIps",
                              "value": Array [
                                Object {
                                  "x": "uniqueDestinationIps",
                                  "y": 2354,
                                },
                              ],
                            },
                          ]
                        }
                      >
                        <AutoSizer
                          content={true}
                          detectAnyWindowResize={false}
                        >
                          <styled.div
                            innerRef={[Function]}
                          >
                            <div
                              className="sc-bwzfXH ffMqh"
                            >
                              <Component
                                data={
                                  Array [
                                    Object {
                                      "color": "#DB1374",
                                      "key": "uniqueSourceIps",
                                      "value": Array [
                                        Object {
                                          "x": "uniqueSourceIps",
                                          "y": "1714",
                                        },
                                      ],
                                    },
                                    Object {
                                      "color": "#490092",
                                      "key": "uniqueDestinationIps",
                                      "value": Array [
                                        Object {
                                          "x": "uniqueDestinationIps",
                                          "y": 2354,
                                        },
                                      ],
                                    },
                                  ]
                                }
                              >
                                <Component
                                  data={
                                    Array [
                                      Object {
                                        "color": "#DB1374",
                                        "key": "uniqueSourceIps",
                                        "value": Array [
                                          Object {
                                            "x": "uniqueSourceIps",
                                            "y": "1714",
                                          },
                                        ],
                                      },
                                      Object {
                                        "color": "#490092",
                                        "key": "uniqueDestinationIps",
                                        "value": Array [
                                          Object {
                                            "x": "uniqueDestinationIps",
                                            "y": 2354,
                                          },
                                        ],
                                      },
                                    ]
                                  }
                                />
                              </Component>
                            </div>
                          </styled.div>
                        </AutoSizer>
                      </Component>
                    </div>
                  </EuiFlexItem>
                </Styled(EuiFlexItem)>
                <Styled(EuiFlexItem)>
                  <EuiFlexItem
                    className="sc-bxivhb bQCHAr"
                  >
                    <div
                      className="euiFlexItem sc-bxivhb bQCHAr"
                    >
                      <Component
                        areaChart={
                          Array [
                            Object {
                              "color": "#DB1374",
                              "key": "uniqueSourceIpsHistogram",
                              "value": Array [
                                Object {
                                  "x": 1556686800000,
                                  "y": 580213,
                                },
                                Object {
                                  "x": 1556730000000,
                                  "y": 1096175,
                                },
                                Object {
                                  "x": 1556773200000,
                                  "y": 12382,
                                },
                              ],
                            },
                            Object {
                              "color": "#490092",
                              "key": "uniqueDestinationIpsHistogram",
                              "value": Array [
                                Object {
                                  "x": 1556686800000,
                                  "y": 565975,
                                },
                                Object {
                                  "x": 1556730000000,
                                  "y": 1084366,
                                },
                                Object {
                                  "x": 1556773200000,
                                  "y": 12280,
                                },
                              ],
                            },
                          ]
                        }
                      >
                        <AutoSizer
                          content={true}
                          detectAnyWindowResize={false}
                        >
                          <styled.div
                            innerRef={[Function]}
                          >
                            <div
                              className="sc-bwzfXH ffMqh"
                            >
                              <Component
                                data={
                                  Array [
                                    Object {
                                      "color": "#DB1374",
                                      "key": "uniqueSourceIpsHistogram",
                                      "value": Array [
                                        Object {
                                          "x": 1556686800000,
                                          "y": 580213,
                                        },
                                        Object {
                                          "x": 1556730000000,
                                          "y": 1096175,
                                        },
                                        Object {
                                          "x": 1556773200000,
                                          "y": 12382,
                                        },
                                      ],
                                    },
                                    Object {
                                      "color": "#490092",
                                      "key": "uniqueDestinationIpsHistogram",
                                      "value": Array [
                                        Object {
                                          "x": 1556686800000,
                                          "y": 565975,
                                        },
                                        Object {
                                          "x": 1556730000000,
                                          "y": 1084366,
                                        },
                                        Object {
                                          "x": 1556773200000,
                                          "y": 12280,
                                        },
                                      ],
                                    },
                                  ]
                                }
                              >
                                <Component
                                  data={
                                    Array [
                                      Object {
                                        "color": "#DB1374",
                                        "key": "uniqueSourceIpsHistogram",
                                        "value": Array [
                                          Object {
                                            "x": 1556686800000,
                                            "y": 580213,
                                          },
                                          Object {
                                            "x": 1556730000000,
                                            "y": 1096175,
                                          },
                                          Object {
                                            "x": 1556773200000,
                                            "y": 12382,
                                          },
                                        ],
                                      },
                                      Object {
                                        "color": "#490092",
                                        "key": "uniqueDestinationIpsHistogram",
                                        "value": Array [
                                          Object {
                                            "x": 1556686800000,
                                            "y": 565975,
                                          },
                                          Object {
                                            "x": 1556730000000,
                                            "y": 1084366,
                                          },
                                          Object {
                                            "x": 1556773200000,
                                            "y": 12280,
                                          },
                                        ],
                                      },
                                    ]
                                  }
                                />
                              </Component>
                            </div>
                          </styled.div>
                        </AutoSizer>
                      </Component>
                    </div>
                  </EuiFlexItem>
                </Styled(EuiFlexItem)>
              </div>
            </EuiFlexGroup>
          </div>
        </EuiPanel>
      </div>
    </EuiFlexItem>
  </Styled(EuiFlexItem)>
</Component>
`;
